<resources>
    <string name="app_prod_name" translatable="false">Hechim</string>
    <string name="app_dev_name" translatable="false">Hechim Dev</string>
    <string name="test_one">Test in english</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_email_hint">Your email</string>
    <string name="register_password_hint">Enter password</string>
    <string name="register_confirm_pass_hint">Confirm password</string>
    <string name="register_sign_in">Sign in</string>
    <string name="register_button">Continue</string>
    <string name="register_headline">Let´s get your account set up!</string>
    <string name="register_password_requirements">Your password must contain lowercase and uppercase letter, number, special character and a minimum length of 8 characters.</string>
    <string name="register_email_invalid">Email invalid!</string>
    <string name="register_password_invalid">Password invalid!</string>
    <string name="register_passwords_identical">Passwords don\'t match!</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_headline">Let\'s sign you in to Hechim app</string>
    <string name="onboarding_top_bar">Onboarding</string>
    <string name="onboarding_next_button">Next</string>
    <string name="onboarding_meditating_title">Meditating</string>
    <string name="onboarding_meditating_desc">Record all your meditations via external smart watch to get rid of the stress.</string>
    <string name="onboarding_planning_title">Exercise planning</string>
    <string name="onboarding_planning_desc">Plan your exercise in advance to keep yourself organized and remind yourself at all times.</string>
    <string name="onboarding_recording_title">Exercise tracking</string>
    <string name="onboarding_recording_desc">Record all your exercises to have weekly, monthly overview of your progress and more</string>
    <string name="onboarding_connecting_title">Connect with others</string>
    <string name="onboarding_connecting_desc">Connect with other Hechim users to share your progress, experiences and meet new people</string>
    <string name="onboarding_proceed">Let\'s go!</string>
    <string name="language_selection_desc">Please select the language for the Hechim app user interface.</string>
    <string name="app_language_fr">French</string>
    <string name="app_language_en">English</string>
    <string name="app_language_de">German</string>
    <string name="app_language_it">Italian</string>
    <string name="app_language_bs">Bosnian</string>
    <string name="language_selection_alert_content">Are you sure you want ot change the language to</string>
    <string name="common_ok" translatable="false">Ok</string>
    <string name="common_no" translatable="false">No</string>
    <string name="langauge_selection_alert_title">Confirm language change</string>
    <string name="language_selection_title">Language selection</string>
    <string name="common_continue">Continue</string>
    <string name="permissions_info_headline">This app needs several permissions to provide you with it\'s core functionality. You can revoke given permissions at anytime from phone\'s settings.</string>
    <string name="permission_location_title">Location</string>
    <string name="permission_location_description">We need your location permission to display your location on the map and track your activity when the app is opened.</string>
    <string name="permission_background_location_title">Background location</string>
    <string name="permission_background_location_desc">To enable tracking in the background (of your workouts), when the app is not opened and the device is locked for longer periods of time we need access to your background location.</string>
    <string name="permission_notification_title">Notifications</string>
    <string name="permission_notification_description">To notify your about your ongoing activity (length, duration, step numbers etc) from notifications, receive notifications about your reports, our latest offers and share your acitivities with other we need your notification permission.</string>
    <string name="permission_activity_title">Activity recognition</string>
    <string name="permission_activity_description">To provide you with step counter functionality, we need your access to your activity recognition.</string>
    <string name="permissions_skip">Skip</string>
    <string name="permissions_button_allow">Allow</string>
    <string name="permission_dialog_title">Grant access to %1$s permission</string>
    <string name="permission_dialog_open_settings">Open settings</string>
    <string name="register_code_title">Register code</string>
    <string name="register_code_subtitle">Enter the code you\'ve received or click the link in your email.</string>
    <string name="register_code_hint">Your code</string>
    <string name="register_code_validation_message">Code must be a 6 digit number</string>
    <string name="register_code_button">Confirm</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_description">Please check your internet connection and try again.</string>
    <string name="no_internet_button">Try again</string>
    <string name="unexpected_error_title">Something went wrong</string>
    <string name="unexpected_error_description">Unexpected error occurred trying to retrieve your data, please try again.</string>
    <string name="internal_server_error_title">Internal server error</string>
    <string name="internal_server_error_description">Server side error occurred, try again later. If problem is still happening, contact our customer suppoprt.</string>
    <string name="unexpected_error_retry">Try again</string>
    <string name="internal_server_error_retry">Contact Support</string>
    <string name="io_error_title">Retrieval error</string>
    <string name="io_error_description">Error occurred trying to retrieve your data, please try again.</string>
    <string name="io_error_retry">Try again</string>
    <string name="timeout_error_title">Timeout occurred</string>
    <string name="timeout_error_description">Request took too long to complete, you might be having problems with your Internet conenction or server is slow to respond. Please try again.</string>
    <string name="timeout_error_retry">Try again</string>
    <string name="http_error_title">Error occured</string>
    <string name="http_error_description">Error occurred retrieving your data, please try again.</string>
    <string name="http_error_retry">Try again</string>
    <string name="change_pass_old_pass_hint">Enter your old password</string>
    <string name="change_pass_old_pass_label">Old password</string>
    <string name="change_pass_new_pass_hint">Enter new password</string>
    <string name="change_pass_new_pass_label">New password</string>
    <string name="change_pass_confirm_pass_hint">Repeat new password</string>
    <string name="change_pass_confirm_pass_label">Confirm password</string>
    <string name="change_pass_length">Minimum 8 characters, maximum 15</string>
    <string name="change_pass_number">At least one number</string>
    <string name="change_pass_character">At least one special character</string>
    <string name="change_pass_uppercase">At least one uppercase letter</string>
    <string name="change_password_title">Change password</string>
</resources>