<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ChangePasswordFragment">

    <include
        android:id="@+id/changePassToolbar"
        layout="@layout/app_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        />

    <include
        android:id="@+id/changePassOldPass"
        layout="@layout/text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePassToolbar"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        />

    <include
        android:id="@+id/changePassNewPass"
        layout="@layout/text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePassOldPass"
        android:layout_marginHorizontal="20dp"
        />

    <include
        android:id="@+id/changePassConfirmPass"
        layout="@layout/text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePassNewPass"
        android:layout_marginHorizontal="20dp"
        />

    <LinearLayout
        android:id="@+id/changePassLength"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePassConfirmPass"
        android:layout_marginTop="12dp"
    >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_arrow_left"
            android:layout_marginEnd="8dp"
            android:rotation="180"
            android:contentDescription="@null"
        />

        <TextView
            android:id="@+id/changePassLengthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pass_length"
        />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/changePassCharacters"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePassLength"
        android:layout_marginTop="12dp"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_arrow_left"
            android:layout_marginEnd="8dp"
            android:rotation="180"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/changePassCharacterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pass_character"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/changePassNumber"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePassCharacters"
        android:layout_marginTop="12dp"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_arrow_left"
            android:layout_marginEnd="8dp"
            android:rotation="180"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/changePassNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pass_number"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/changePassUppercase"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePassNumber"
        android:layout_marginTop="12dp"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_arrow_left"
            android:layout_marginEnd="8dp"
            android:rotation="180"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/changePassUppercaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pass_uppercase"
            />


    </LinearLayout>

    <include
        android:id="@+id/changePassButton"
        layout="@layout/app_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>